Updated boom and rocketchip to use github repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "rocket-chip"]
 	path = generators/rocket-chip
-	url = git@aus-gitlab.local.tenstorrent.com:dxie/rocket-chip.git
+	url = https://github.com/tenstorrent/rocket-chip.git
 [submodule "testchipip"]
 	path = generators/testchipip
 	url = https://github.com/ucb-bar/testchipip.git
@@ -12,7 +12,7 @@
 	url = https://github.com/ucb-bar/riscv-torture.git
 [submodule "generators/boom"]
 	path = generators/boom
-	url = git@aus-gitlab.local.tenstorrent.com:dxie/boom.git
+	url = https://github.com/tenstorrent/riscv-ocelot.git
 [submodule "generators/sifive-blocks"]
 	path = generators/sifive-blocks
 	url = https://github.com/chipsalliance/rocket-chip-blocks.git
